--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="w-2/3 pr-10 flex flex-col">
         <h3 class="mb-5 font-semibold text-gray-400">About</h3>
 
-        <p class="text-lg text-gray-500 inline-block align-bottom mt-auto">© 2022-2023 Papa Carlo`s pizza. All rights reserved</p>
+        <p class="text-lg text-gray-500 inline-block align-bottom mt-auto">© 2022-2023 Papa Carlo`s. All rights reserved</p>
     </div>
 
     <div class="w-1/3">
