--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <nav class="py-6 px-6 bg-gray-100 flex justify-between items-center border-b-4 border-gray-300">
-    <h1 class="text-xl font-semibold">Papa Carlo`s pizza</h1>
+    <h1 class="text-xl font-semibold">Papa Carlo`s</h1>
 
     <div class="space-x-6">
         <a href="#" class="text-lg font-semibold hover:text-gray-500">Main</a>
